# PE-Parametric-Surfaces

./: .gitignore  CMakeLists.txt  README.md  tp.cpp
parametric_curves/: berstein.cpp  berstein.h  casteljau.cpp  casteljau.h  hermite.cpp  hermite.h
src/: Camera.cpp  Vec3.h
surface_bernstein/: surface_bernstein.cpp  surface_bernstein.h
surface_cylindrique/: surface_cylindrique.cpp  surface_cylindrique.h
surface_reglee/: surface_reglee.cpp  surface_reglee.h
